k8s/gitops/policies/constrainttemplate-no-hostpath.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8snoHostPathVolumes
spec:
  crd:
    spec:
      names:
        kind: K8sNoHostPathVolumes
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8snoHostPathVolumes

        violation[{"msg": msg}] {
          input.review.object.kind == "Pod"
          volume := input.review.object.spec.volumes[_]
          volume.hostPath
          msg := sprintf("hostPath volumes are not allowed: %v", [volume.name])
        }
